✨ feat: adds AddBrandsListUseCase
